# turtlebot

./: .cproject  .gitignore  .hgignore  .hgtags  .project  CHANGELOG.rst  CMakeLists.txt  Changelog  LICENSE  README.md  android_joystick.app  android_joystick.launch  android_teleop.app  android_teleop.launch  android_teleop_no_map.app  android_teleop_no_map.interface  appmanager.sh  joystick_teleop.launch  keyboard_teleop.launch  kobuki.sh  logitech_teleop.app  mainpage.dox  manifest.xml  manifest.xml.old  package.xml  ps3_teleop.app  ps3_teleop.launch  ps3_teleop_simple.launch  rosdep.yaml  setup_create.sh  setup_create2.sh  setup_kobuki.sh  setup_t1.sh  stack.xml  teleop.interface  teleop.launch  turtlebot.rosinstall  turtlebot_capabilities.rosinstall  turtlebot_catkin.rosinstall  turtlebot_fuerte.rosinstall  (+4 more)
linux_hardware/: .cproject  .gitignore  .project  CHANGELOG.rst  CMakeLists.txt  mainpage.dox  manifest.xml  package.xml  setup.py
linux_hardware/msg/: LaptopChargeStatus.msg
linux_hardware/scripts/: laptop_battery.py
turtlebot/: .cproject  CHANGELOG.rst  CMakeLists.txt  package.xml
turtlebot_actions/: CMakeLists.txt  mainpage.dox  manifest.xml
turtlebot_actions/action/: ActionMsgMapper.action  FindFiducial.action  TurtlebotMove.action
turtlebot_actions/nodes/: action_msg_mapper.py
turtlebot_actions/src/: detect_calibration_pattern.cpp  find_fiducial_pose.cpp  turtlebot_move_action_server.cpp
turtlebot_app_manager/: .cproject  .gitignore  .project  CMakeLists.txt  app_manager.launch  manifest.xml  package.xml  setup.py
turtlebot_app_manager/mock_apps/: turtlebot_apps.installed
turtlebot_app_manager/msg/: App.msg  AppInstallationState.msg  AppList.msg  AppStatus.msg  ClientApp.msg  ExchangeApp.msg  Icon.msg  StatusCodes.msg
turtlebot_app_manager/scripts/: app_manager  appmaster  rosget  test_app.py
turtlebot_app_manager/srv/: GetAppDetails.srv  GetInstallationState.srv  InstallApp.srv  ListApps.srv  StartApp.srv  StopApp.srv  UninstallApp.srv
turtlebot_app_manager/test/: appA.app  test1.interface  test_app.py  test_app_list.py
turtlebot_bringup/: .cproject  .project  CHANGELOG.rst  CMakeLists.txt  app_manager.launch  base.app  base.launch  create.launch  create_solo.launch  driver.launch  kinect.launch  mainpage.dox  manifest.xml  minimal.lauch  minimal.launch  package.xml  params.launch  robot.launch  setup.py  turtlebot.launch  turtlebot_solo.launch
turtlebot_bringup/apps/: turtlebot.rapps  turtlebot_apps.installed
turtlebot_bringup/concert/: bringup.concert
turtlebot_bringup/config/: diagnostics.yaml
turtlebot_bringup/env-hooks/: 25.turtlebot.sh.em
turtlebot_bringup/interactions/: admin.interactions  documentation.interactions  pairing.interactions  visualisation.interactions
turtlebot_bringup/launch/: 3dsensor.launch  app_manager.launch  app_manager_with_capabilities.launch  app_platform.launch  concert_client.launch  concert_minimal.launch  diagnostics.launch  experimental_minimal.launch  kinect.launch  minimal.launch  minimal_3dsensor.launch  minimal_soft.launch  minimal_web.launch  minimal_with_appmanager.launch  paired_public.launch  rapp_platform.launch  roboworld.launch  start.concert  turtlebot_bringup.launch.py
turtlebot_bringup/mock_apps/: turtlebot_apps.installed
turtlebot_bringup/param/: 3dsensor.yaml  kinect.yaml  mux.yaml  preferred_rapp.yaml
turtlebot_bringup/rviz/: model.vcg  navigation.vcg  readme.txt  robot.rviz  robot.vcg  turtlebot.vcg
turtlebot_bringup/scripts/: turtlebot_addr.py
turtlebot_bringup/turtlebot_bringup/: mainpage.dox  manifest.xml
turtlebot_bringup/upstart/: 52-turtlebot.rules  README  bringup.concert  bringup.launch  install.bash  ps3joy.conf  turtlebot-boot.conf  turtlebot-net-down.conf  turtlebot-net-up.conf  turtlebot-start  turtlebot-start-new  turtlebot-stop  turtlebot.conf  turtlebot.launch
turtlebot_bringup/yaml/: zeroconf.yaml
turtlebot_capabilities/: .cproject  .project  CHANGELOG.rst  CMakeLists.txt  package.xml
turtlebot_capabilities/interfaces/: TurtleBotBringup.yaml
turtlebot_capabilities/providers/: depthimage_to_laserscan.yaml  diagnostics.yaml  differential_mobile_base.yaml  kinect_rgbd_sensor.yaml  rgbd_sensor.yaml  robot_state_publisher.yaml  tb_bringup.yaml  turtlebot2_bringup.yaml  turtlebot_bringup.yaml  xtion_rgbd_sensor.yaml
turtlebot_description/: .cproject  CHANGELOG.rst  CMakeLists.txt  README.md  mainpage.dox  manifest.xml  package.xml  readme.txt  test.launch
turtlebot_description/launch/: display.launch.py
turtlebot_description/meshes/: 68-02421-8000-RA_Turtlebot_F-F_Standoff.dae  68-04545_iRobot_Create.STL  plate_1_logo.dae  plate_1_logo_color.tga  plate_2_logo.dae  plate_2_logo_color.tga
turtlebot_description/robots/: create_circles_asus_xtion_pro.urdf.xacro  create_circles_kinect.urdf.xacro  kobuki_hexagons_astra.urdf  kobuki_hexagons_astra.urdf.xacro  kobuki_hexagons_astrapro.urdf.xacro  kobuki_hexagons_asus_xtion_pro.urdf.xacro  kobuki_hexagons_asus_xtion_pro_center.urdf.xacro  kobuki_hexagons_asus_xtion_pro_offset.urdf.xacro  kobuki_hexagons_hokuyo.urdf.xacro  kobuki_hexagons_kinect.urdf.xacro  kobuki_hexagons_r200.urdf.xacro  roomba_circles_asus_xtion_pro.urdf.xacro  roomba_circles_kinect.urdf.xacro  turtlebot.urdf.xacro
turtlebot_description/rviz/: urdf_config.rviz
turtlebot_description/scripts/: calc_inertia.m  plate_simple.scad
turtlebot_description/test/: test_urdf.cpp
turtlebot_description/urdf/: asus_xtion_pro.urdf.xacro  gazebo.urdf.xacro  kinect_turtlebot2.urdf.xacro  stack_hexagons.urdf.xacro  turtlebot.xacro  turtlebot2_stack.urdf.xacro  turtlebot_body.urdf.xacro  turtlebot_calibration.xacro  turtlebot_common_library.urdf.xacro  (+7 more)
turtlebot_extrinsic_calibration/: CMakeLists.txt  calibrate_kinect.launch  mainpage.dox  manifest.xml
turtlebot_teleop/: CHANGELOG.rst  CMakeLists.txt  README.md  android_make_a_map.launch  android_map_nav.launch  android_teleop.app  android_teleop.interface  android_teleop.launch  android_teleop_no_map.launch  keyboard_teleop.launch  mainpage.dox  manifest.xml  package.xml  teleop.launch
(+345 files in other folders)
