<package>
  <name>turtlebot</name>
  <version>2.3.14</version>
  <description>
    The turtlebot meta package provides all the basic drivers for running and using a TurtleBot.
  </description>
  <author>Tully Foote</author>
  <author>Michael Ferguson</author>
  <author>Melonee Wise</author>
  <maintainer email="stonier@rnd.yujinrobot.com">Daniel Stonier</maintainer>
  <maintainer email="tfoote@osrfoundation.org">Tully Foote</maintainer>
  <maintainer email="mferguson@willowgarage.com">Michael Ferguson</maintainer>
  <maintainer email="mwise@willowgarage.com">Melonee Wise</maintainer>
  <license>BSD</license>
  <url type="website">http://ros.org/wiki/turtlebot</url>
  <url type="repository">https://github.com/turtlebot/turtlebot</url>
  <url type="bugtracker">https://github.com/turtlebot/turtlebot/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>turtlebot_bringup</run_depend>
  <run_depend>turtlebot_capabilities</run_depend>
  <run_depend>turtlebot_description</run_depend>
  <run_depend>turtlebot_teleop</run_depend>

  <export>
    <metapackage/>
  </export>
</package>
