<package>
  <name> turtlebot_app_manager</name>
  <version>2.0.0</version>
  <description>

     Temporary app manager for turtlebot while it undergoes a redesign.

  </description>
  <author>Jeremy Leibs, Ken Conley</author>
  <maintainer email="d.stonier@gmail.com">Daniel Stonier</maintainer>
  <license>BSD</license>
  <url>http://ros.org/wiki/app_manager</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>rosgraph</run_depend>
  <run_depend>roslaunch</run_depend>
  <run_depend>rosunit</run_depend>

  <!-- 
    Really annoying dependency for the app 
    manager msgs until we can recompile android 
  -->
  <!--<depend package="app_manager"/> hm...-->
</package>


